k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scribblydo
  labels:
    app.kubernetes.io/name: scribblydo
    app.kubernetes.io/part-of: scribblydo-application
